Refaktor: Schemas & Projektauflösung modularisiert
